--- a/new-try/About_me/index.html
+++ b/new-try/About_me/index.html
@@ -42,13 +42,12 @@
                 <img class="my-photo" src="../assets/images/my-photo.jpg" alt="">
             </div>
             <p class="bio-text">
-                Hi, I am Thomas Ernesto Ginder, I'm 23 years old guy from Sardinia, Italy. My last name 
-                can trick someone because my dad is from Germany. My dream is to become a professional software
-                developer and who knows, become a robotic engineer. One of my goals is to
-                improve life on our planet with my programs. I consider myself a very kind person with a
-                lot of energy to improve myself and my work every day, a messy but pedant person who loves
-                to use logic to create everything that can give me a satisfying output. I prefer slow but
-                detailed work instead a fast and trivial work because a hurry is never good.
+                Hi, I am Thomas Ernesto Ginder, I'm 23 years old guy from Sardinia, Italy. My dream is to become a 
+                professional software developer and who knows, become a robotic engineer. One of my goals is to improve 
+                life on our planet with my programs. I consider myself a very kind person with a lot of energy to improve 
+                myself and my work every day, a messy but pedant person who loves to use logic to create everything that 
+                can give me a satisfying output. 
+                I prefer slow but detailed work instead a fast and trivial work because a hurry is never good.
             </p>
         </div> 
         <p class="title">Things I like:</p>
