--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="../assets/css/header.css">
-    <link rel="stylesheet" href="../assets/css/footer.css">
-    <link rel="stylesheet" href="../assets/css/home-page.css">
+    <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/styles.css">
+    <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/header.css">
+    <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/footer.css">
+    <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/home-page.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Ernesto Ginder's Portfolio</title>
