--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="home-container">
             <a href="../Home_Page/">
-                <img src="../assets/icons/home.svg" alt="home">
+                <img src="../start2impact-first-project/docs/assets/icons/home.svg" alt="home">
             </a>
         </div>
         <p class="journey"><a href="../My_Journey/">My Journey</a></p>
