--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/styles.css">
-    <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/header.css">
+    <link rel="stylesheet" href="/docs/assets/css/header.css">
     <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/footer.css">
     <link rel="stylesheet" href="../start2impact-first-project/docs/assets/css/home-page.css">
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
     <header>
         <div class="home-container">
             <a href="../Home_Page/">
-                <img src="../start2impact-first-project/docs/assets/icons/home.svg" alt="home">
+                <img src="/docs/assets/icons/home.svg" alt="home">
             </a>
         </div>
         <p class="journey"><a href="../My_Journey/">My Journey</a></p>
