--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="/docs/Home_Page/index.html">
+            <a href="/docs/Home_Page/">
                 <img src="/docs/assets/icons/home.svg" alt="home">
             </a>
         </div>
