--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="./Home_Page/">
-                <img src="/docs/assets/icons/home.svg" alt="home">
+            <a href="./docs/Home_Page/index.html">
+                <img src="./docs/assets/icons/home.svg" alt="home">
             </a>
         </div>
-        <p class="journey"><a href="../My_Journey/">My Journey</a></p>
-        <p class="bio"> <a href="../About_me/">About me</a></p>
+        <p class="journey"><a href="./docs/My_Journey/index.html">My Journey</a></p>
+        <p class="bio"> <a href="./docs/About_me/index.html">About me</a></p>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="../assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="./docs/assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="../assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="./docs/assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -49,7 +49,7 @@
         </div>
         <div class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
-            <img src="../assets/images/kinder.png" alt="kinder">
+            <img src="./docs/assets/images/kinder.png" alt="kinder">
         </div>
         <div class="bg-mention">
             <a class="background-mention" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila </a>
