--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="Home_Page/index.html">
+            <a href="index.html">
                 <img src="assets/icons/home.svg" alt="home">
             </a>
         </div>
