--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="../Home_Page/">
+            <a href="../">
                 <img src="../assets/icons/home.svg" alt="home">
             </a>
         </div>
