--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="../Home_Page/">
+            <a href="../">
                 <img src="../assets/icons/home.svg" alt="home">
             </a>
         </div>
