worked in homepage

--- a/index.html
+++ b/index.html
@@ -36,26 +36,49 @@
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
     </header>
     <main>
+ 
         <div class="full-name">
             <div class="name-container">
-                <p class="name">Thomas</p>
+                <h1 class="name">Thomas</h1>
             </div>
             <div class="second-name-container">
-                <p class="second-name">Ernesto</p>
+                <h1 class="second-name">Ernesto</h1>
             </div>
             <div class="lastname-container">
-                <p class="lastname">Ginder</p>
+                <h1 class="lastname">Ginder</h1>
             </div>
         </div>
         <div class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
             <img src="assets/images/kinder.png" alt="kinder">
         </div>
-        <div class="bg-mention">
-            <a class="background-mention" target="_blank" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila </a>
-             on Freepik
+        <div class="skills">
+            <div class="soft-skills">
+                <h2 class="soft-title">Soft Skills:</h2>
+                <ul>
+                    <li>Curiosity</li>
+                    <li>Humility</li>
+                    <li>Open Mind</li>
+                    <li>Problem Solving</li>
+                    <li>Responsibility</li>
+                 </ul>
+            </div>  
+            <div class="hard-skill">
+                <h2 class="hard-title">Hard Skills:</h2>
+                <ul>
+                    <li>Html</li>
+                    <li>Css</li>
+                    <li>Siemens Step 5/7</li>
+                    <li>English</li>
+                    <li>German</li>
+                </ul>
+            </div> 
         </div>
     </main>
+    <div class="bg-mention">
+        <a class="background-mention" target="_blank" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila &nbsp;</a>
+         on Freepik
+    </div>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
         <div class="form-container" popover id="contact-form">
