--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -17,6 +17,9 @@
 </head>
 <body>
     <header>
+        <div class="hamburger-menu">
+            <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu">
+        </div>
         <div class="home-container">
             <a href="../">
                 <img src="../assets/icons/home.svg" alt="home">
