--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 <body>
     <header>
+        <div class="hamburger-menu">
+            <img src="assets/icons/hamburger-menu.svg" alt="hamburger-menu">
+        </div>
         <div class="home-container">
             <a>
                 <img src="assets/icons/home.svg" alt="home">
