--- a/About_me/index.html
+++ b/About_me/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+      emailjs.init({
+        publicKey: "nBQh49g0WBQPiLN58",
+      });
+     })();
+    </script>
+    <script src="../assets/js/email.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
@@ -72,19 +83,20 @@
         <div class="form-container" popover id="contact-form">
             <div class="overlay">
                 <form class="contact-form">
-                    <button class="close-form">X</button>
-                    <div class="first-name-container">
-                        <label for="first-name">First Name:</label>
-                        <input type="text" name="first-name" id="first-name" placeholder="Thomas">
+                    <button class="close-form"><a>X</a></button>
+                    <div class="name-container">
+                        <label for="name">Your Name:</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter your name:">
                     </div>
                     <div class="email-container">
                         <label for="email">Email:</label>
-                        <input type="email" name="email" id="email" placeholder="thomas.ginder00@gmail.com">
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email:">
                     </div>
-                    <div class="phone-number-container">
-                        <label for="phone-number">Phone Number:</label>
-                        <input type="number" name="phone-number" id="phone-number" placeholder="+39 377 174 9747">
+                    <div class="message-container">
+                        <label for="message">Message:</label>
+                        <textarea class="form-control" rows="3"  id="message" placeholder="Enter Your Messege:"></textarea>
                     </div>
+                    <button class="send" onclick="sendMail">SEND</button>
                 </form>
             </div>
         </div>
