--- a/About_me/index.html
+++ b/About_me/index.html
@@ -86,17 +86,17 @@
                     <button class="close-form"><a>X</a></button>
                     <div class="name-container">
                         <label for="name">Your Name:</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your name:">
+                        <input type="text" id="name" placeholder="Enter Your Name:" required>
                     </div>
                     <div class="email-container">
                         <label for="email">Email:</label>
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email:">
+                        <input type="email" id="email" placeholder="Enter Your Email:" required>
                     </div>
                     <div class="message-container">
                         <label for="message">Message:</label>
-                        <textarea class="form-control" rows="3"  id="message" placeholder="Enter Your Messege:"></textarea>
+                        <textarea rows="3" id="message" placeholder="Enter Your Messege:" required></textarea>
                     </div>
-                    <button class="send" onclick="sendMail">SEND</button>
+                    <button class="send" onclick="sendMail()">SEND</button>
                 </form>
             </div>
         </div>
