--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -74,20 +74,24 @@
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
         <div class="form-container" popover id="contact-form">
             <div class="overlay">
-                <form class="contact-form">
-                    <button class="close-form">X</button>
-                    <div class="first-name-container">
-                        <label for="first-name">First Name:</label>
-                        <input type="text" name="first-name" id="first-name" placeholder="Thomas">
+                <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="3f37e47b-4de8-40a5-89a6-174d0c4d1606">
+                    <button class="close-form"><a>X</a></button>
+                    <div class="name-container">
+                        <label for="name">Your Name:</label>
+                        <input name="name" type="text" id="name" placeholder="Enter Your Name:" required>
                     </div>
                     <div class="email-container">
                         <label for="email">Email:</label>
-                        <input type="email" name="email" id="email" placeholder="thomas.ginder00@gmail.com">
+                        <input name="email" type="email" id="email" placeholder="Enter Your Email:" required>
                     </div>
-                    <div class="phone-number-container">
-                        <label for="phone-number">Phone Number:</label>
-                        <input type="number" name="phone-number" id="phone-number" placeholder="+39 377 174 9747">
+                    <div class="message-container">
+                        <label for="message">Message:</label>
+                        <textarea name="message" rows="3" id="message" placeholder="Enter Your Messege:" required></textarea>
+                       
                     </div>
+                    <input type="hidden" name="redirect" value="https://web3forms.com/success">         
+                    <input name="send-button" class="send" type="submit" value="Send">
                 </form>
             </div>
         </div>
