some adjustment in about me page and added meta tags at the whole site

--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/mentions.css">
+    <meta name="description" content="This is my webpage for all icons mentions on the about me page">
+    <meta name="keywords" content="icons,mentions,by,portfolio,Thomas,Ernesto,Ginder">
+    <meta name="robots" content="noindex">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Icons Mentions</title>
