--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/journey.css">
+    <meta name="description" content="Welcome to my coding journey!! Here you can read about all my experiences from my school 
+    to my work-in-progress master">
     <meta charset="UTF-8">
+    <meta name="keywords" content="portfolio,Thomas,Ernesto,Ginder,Siemens,Python,Html,CSS,School,course,master,start2impact">
+    <meta name="robots" content="max-snippet:-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Coding Journey</title>
 </head>
