--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home-page.css">
+    <meta name="description" content="Welcome to my portfolio website! Here, you can explore my 
+    past projects, skills, and experience. I'm a highly motivated and detail-oriented professional
+     with a passion for delivering high-quality work.">
+     <meta name="keywords" content="portfolio,Thomas,Ernesto,Ginder,Kinder,skills">
+     <meta name="robots" content="max-snippet:78">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Ernesto Ginder's Portfolio</title>
