--- a/About_me/index.html
+++ b/About_me/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
+    <meta name="description" content="Welcome to my biography webpage, here you can find more info about myself and
+    the things that I like most">
+    <meta name="keywords" content="portfolio,Thomas,Ernesto,Ginder,person,like,Sardinia,work">
+    <meta name="robots" content="max-snippet:-1">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
