meta og tags added

--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/mentions.css">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Icons Mentions">
+    <meta property="og:description" content="This is my webpage for all icons mentions on the about me page">
     <meta name="description" content="This is my webpage for all icons mentions on the about me page">
     <meta name="keywords" content="icons,mentions,by,portfolio,Thomas,Ernesto,Ginder">
     <meta name="robots" content="noindex">
