--- a/About_me/index.html
+++ b/About_me/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
+    <meta property="og:image" content="
+    http://127.0.0.1:5500/assets/images/my-photo.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Welcome to my biography webpage, here you can find more info about myself and
+    the things that I like most">
     <meta name="description" content="Welcome to my biography webpage, here you can find more info about myself and
     the things that I like most">
     <meta name="keywords" content="portfolio,Thomas,Ernesto,Ginder,person,like,Sardinia,work">
