--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/journey.css">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="
+    http://127.0.0.1:5500/assets/images/my-photo.jpg">
+    <meta property="og:description" content="Welcome to my coding journey!! Here you can read about all my experiences from my school 
+    to my work-in-progress master">
     <meta name="description" content="Welcome to my coding journey!! Here you can read about all my experiences from my school 
     to my work-in-progress master">
     <meta charset="UTF-8">
