--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home-page.css">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Thomas Ernesto Ginder Portfolio">
+    <meta property="og:image" content="
+    http://127.0.0.1:5500/assets/images/my-photo.jpg">
+    <meta property="og:description" content="Welcome to my portfolio website! Here, you can explore my 
+    past projects, skills, and experience. I'm a highly motivated and detail-oriented professional
+     with a passion for delivering high-quality work.">
     <meta name="description" content="Welcome to my portfolio website! Here, you can explore my 
     past projects, skills, and experience. I'm a highly motivated and detail-oriented professional
      with a passion for delivering high-quality work.">
