og meta tag added, fixes, favicon icon added

--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/journey.css">
+    <link rel="icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:image" content="
     http://127.0.0.1:5500/assets/images/my-photo.jpg">
@@ -24,11 +25,11 @@
 <body>
     <header>
         <div class="hamburger-menu">
-            <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu">
+            <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
         </div>
         <div class="home-container">
             <a href="../">
-                <img src="../assets/icons/home.svg" alt="home">
+                <img src="../assets/icons/home.svg" alt="home" title="home-icon">
             </a>
         </div>
         <div class="journey-container">
@@ -38,10 +39,10 @@
         <p class="bio"> <a href="../About_me/">About me</a></p>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="../assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="../assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo">
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="../assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="../assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -50,15 +51,15 @@
     <main>
         <div class="main-container">
             <div class="title-container">
-                <p class="title">
+                <h1 class="title">
                     <strong>Welcome</strong> to my coding  <span>journey!</span>
-                    </p>
+                </h1>
             </div>
              <div class="grid-container">
                  <div class="grid-texts">
-                     <p class="grid-title">
+                     <h1 class="grid-title">
                          SIEMENS Step 5 & 7
-                     </p>
+                     </h1>
                      <p class="grid-story">
                          I graduated with 87/100 in the Maintenance Technician studying programme
                               from <a href="https://www.ipsiameucci.edu.it/" 
@@ -68,18 +69,18 @@
                               and the satisfaction of creating and fixing codes, especially the challenging ones.
                      </p>
                  </div>
-                 <img src="../assets/images/electrician.jpg" alt="" class="electrician">
+                 <img src="../assets/images/electrician.jpg" alt="electrical-pannel" title="electrical-pannel" class="electrician">
              </div>
              <div class="grid-container reverse">
                  <div class="images-py">
-                     <img src="../assets/images/python-course-01.PNG" alt="" class="course1">
-                     <img src="../assets/images/python.jpg" alt="" class="python">
-                     <img src="../assets/images/python-course-2.PNG" alt="" class="course2">
+                     <img src="../assets/images/python-course-01.PNG" alt="course-python1" title="course-python1" class="course1">
+                     <img src="../assets/images/python.jpg" alt="python-logo" title="python-logo" class="python">
+                     <img src="../assets/images/python-course-2.PNG" alt="course-python2" title="course-python2" class="course2">
                  </div>
                  <div class="grid-texts">
-                     <p class="grid-title">
+                     <h1 class="grid-title">
                          Python
-                     </p>
+                     </h1>
                      <p class="grid-story">
                         After graduation, I worked for Infocom Impianti, an optical fiber company, and 
                         for Nuova Sarmaplastik, a plastic bags factory. Despite my work experience in other sectors, 
@@ -91,9 +92,9 @@
              </div>
              <div class="grid-container">
                  <div class="grid-texts">
-                     <p class="grid-title">
+                     <h1 class="grid-title">
                          Html & Css
-                     </p>
+                     </h1>
                      <p class="grid-story">
                         In order to deepen my interest in programming, I started a Master's in Back End Development
                          at  <a href="https://www.start2impact.it/">Start2Impact University</a>. Next to a
@@ -103,7 +104,7 @@
                         full-emotional sensation of doing a complex code that works how I want to once again.
                      </p>
                  </div>
-                 <img src="../assets/images/html-css.png" alt="" class="html-css">
+                 <img src="../assets/images/html-css.png" alt="html-css-image" title="html-css-image" class="html-css">
              </div>  
         </div>   
     </main>
