--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home-page.css">
+    <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas Ernesto Ginder Portfolio">
     <meta property="og:image" content="
-    http://127.0.0.1:5500/assets/images/my-photo.jpg">
+        http://127.0.0.1:5500/assets/images/my-photo.jpg">
     <meta property="og:description" content="Welcome to my portfolio website! Here, you can explore my 
     past projects, skills, and experience. I'm a highly motivated and detail-oriented professional
      with a passion for delivering high-quality work.">
@@ -31,21 +32,21 @@
 <body>
     <header>
         <div class="hamburger-menu">
-            <img src="assets/icons/hamburger-menu.svg" alt="hamburger-menu">
+            <img src="assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
         </div>
         <div class="home-container">
             <a>
-                <img src="assets/icons/home.svg" alt="home">
+                <img src="assets/icons/home.svg" alt="home" title="home-icon">
             </a>
         </div>
         <p class="journey"><a href="My_Journey/index.html">My Journey</a></p>
         <p class="bio"> <a href="About_me/index.html">About me</a></p>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo" >
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -65,7 +66,7 @@
         </div>
         <div class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
-            <img src="assets/images/kinder.png" alt="kinder">
+            <img src="assets/images/kinder.png" alt="kinder" title="kinder-icon">
         </div>
         <div class="skills">
             <div class="soft-skills">
