--- a/About_me/index.html
+++ b/About_me/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <meta property="og:image" content="
     http://127.0.0.1:5500/assets/images/my-photo.jpg">
     <meta property="og:type" content="website">
@@ -26,12 +27,12 @@
 </head>
 <body>
     <div class="hamburger-menu">
-        <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu">
+        <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
     </div>
     <header>
         <div class="home-container">
             <a href="../">
-                <img src="../assets/icons/home.svg" alt="home">
+                <img src="../assets/icons/home.svg" alt="home" title="home-icon">
             </a>
         </div>
         <p class="journey"><a href="../My_Journey/">My Journey</a></p>
@@ -40,10 +41,10 @@
         </div>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="../assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="../assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo">
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="../assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="../assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -51,29 +52,27 @@
     <main>
         <div class="biography">
             <div class="my-photo-container">
-                <img class="my-photo" src="../assets/images/my-photo.jpg" alt="">
+                <img class="my-photo" src="../assets/images/my-photo.jpg" alt="Thomas-Photo" title="thomas-photo">
             </div>
-            <p class="bio-text">
+            <h1 class="bio-text">
                 Hi, I am Thomas Ernesto Ginder, I'm 23 years old guy from Sardinia, Italy. My dream is to become a 
                 professional software developer and who knows, become a robotic engineer. One of my goals is to improve 
                 life on our planet with my programs. I consider myself a very kind person with a lot of energy to improve 
                 myself and my work every day, a messy but pedant person who loves to use logic to create everything that 
                 can give me a satisfying output. 
                 I prefer slow but detailed work instead a fast and trivial work because a hurry is never good.
-            </p>
+            </h1>
         </div> 
-        <p class="title">Things I like:</p>
+        <h2 class="title">Things I like:</h2>
         <ul>
-            <div class="like-container">
-                <li class="gaming"><img src="../assets/icons/game-controller.png" alt="">Gaming <img src="../assets/icons/heart.png" alt=""></li>
-                <li class="board"><img src="../assets/icons/chess.png" alt="">Board Games <img src="../assets/icons/dice.png" alt=""></li>
-                <li class="music"><img src="../assets/icons/electronic.png" alt="">Music <img src="../assets/icons/headphones.png" alt=""></li>
-                <li class="chun"><img src="../assets/icons/wing-chun.png" alt="">Wing Chun <img src="../assets/icons/tan.png" alt=""></li>
-                <li class="eat"><img src="../assets/icons/pizza.png" alt="">Eating <img src="../assets/icons/cookie.png" alt=""></li>
-                <li class="dogs"><img src="../assets/icons/dog.png" alt="">Dogs<img src="../assets/icons/puppy.png" alt=""></li>
-                <li class="climate"><img src="../assets/icons/planet.png" alt="">Environment <img src="../assets/icons/volunteering.png" alt=""></li>
-                <li class="astronomy"><img src="../assets/icons/telescope.png" alt="">Astonomy <img src="../assets/icons/galaxy.png" alt=""></li>
-            </div>
+            <li class="gaming"><img src="../assets/icons/game-controller.png" alt="game-controller" title="game-controller-icon">Gaming <img src="../assets/icons/heart.png" alt="pixel-heart" title="pixel-heart-icon"></li>
+            <li class="board"><img src="../assets/icons/chess.png" alt="chess-king" title="chess-king-icon">Board Games <img src="../assets/icons/dice.png" alt="dice" title="dice-icon"></li>
+            <li class="music"><img src="../assets/icons/electronic.png" alt="electronic-music" title="electronic-music-icon">Music <img src="../assets/icons/headphones.png" alt="headphones" title="headphones-icon"></li>
+            <li class="chun"><img src="../assets/icons/wing-chun.png" alt="mannequin" title="mannequin-icon">Wing Chun <img src="../assets/icons/tan.png" alt="tan" title="tan-icon"></li>
+            <li class="eat"><img src="../assets/icons/pizza.png" alt="salami-pizza" title="salami-pizza-icon">Eating <img src="../assets/icons/cookie.png" alt="cookie" title="cookie-icon"></li>
+            <li class="dogs"><img src="../assets/icons/dog.png" alt="dog" title="dog-icon">Dogs<img src="../assets/icons/puppy.png" alt="puppy" title="puppy-icon"></li>
+            <li class="climate"><img src="../assets/icons/planet.png" alt="planet" title="planet-icon">Environment <img src="../assets/icons/volunteering.png" alt="volunteering" title="volunteering-icon"></li>
+            <li class="astronomy"><img src="../assets/icons/telescope.png" alt="telescope" title="telescope-icon">Astonomy <img src="../assets/icons/galaxy.png" alt="galaxy" title="galaxy-icon"></li>
         </ul>
     </main>
     <footer>
