--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/mentions.css">
+    <link rel="icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Icons Mentions">
     <meta property="og:description" content="This is my webpage for all icons mentions on the about me page">
@@ -24,11 +25,11 @@
 <body>
     <header>
         <div class="hamburger-menu">
-            <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu">
+            <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
         </div>
         <div class="home-container">
             <a href="../">
-                <img src="../assets/icons/home.svg" alt="home">
+                <img src="../assets/icons/home.svg" alt="home" title="home-icon">
             </a>
         </div>
         <p class="journey"><a href="../My_Journey/">My Journey</a></p>
@@ -37,10 +38,10 @@
         </div>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="../assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="../assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo">
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="../assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="../assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -52,27 +53,28 @@
         <div class="mentions-container">
             <div class="icons8-container">
                 <div class="icons8">
-                    <a target="_blank" href="https://icons8.com/icon/5DANichneoqj/game-controller">Game Controller <img src="../assets/icons/game-controller.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/upd5xh7hPe0R/pixel-heart">Pixel Heart <img src="../assets/icons/heart.png" alt=""></a>                    <a target="_blank" href="https://icons8.com/icon/10288/king">King <img src="../assets/icons/chess.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/_j_F9jG67IQ1/dice">Dice <img src="../assets/icons/dice.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/12100/electronic-music">Electronic Music <img src="../assets/icons/electronic.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/20747/headphones">Headphones <img src="../assets/icons/headphones.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/oTyopyeAHiFU/salami-pizza">Salami Pizza <img src="../assets/icons/pizza.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/107442/cookie">Cookie <img src="../assets/icons/cookie.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/TO7tQS2Frpif/siba-inu-kawaii">Siba Inu Kawaii <img src="../assets/icons/dog.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/IZ93evILA9l5/puppy">Puppy <img src="../assets/icons/puppy.png" alt=""></a>
-                        <a target="_blank" href="https://icons8.com/icon/w7B57EZzIV9I/planet">Planet <img src="../assets/icons/planet.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/16007/volunteering">Volunteering <img src="../assets/icons/volunteering.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/iuHJFo6arekf/telescope">Telescope <img src="../assets/icons/telescope.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/a2MFXoTTlsWP/nebula">Galaxy <img src="../assets/icons/galaxy.png" alt=""></a> 
+                    <a target="_blank" href="https://icons8.com/icon/5DANichneoqj/game-controller">Game Controller <img src="../assets/icons/game-controller.png" alt="game-controller" title="game-controller-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/10288/king">King <img src="../assets/icons/chess.png" alt="chess-king" title="chess-king-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/upd5xh7hPe0R/pixel-heart">Pixel Heart <img src="../assets/icons/heart.png" alt="pixel-heart" title="pixel-heart-icon"></a>                    
+                    <a target="_blank" href="https://icons8.com/icon/_j_F9jG67IQ1/dice">Dice <img src="../assets/icons/dice.png" alt="dice" title="dice-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/12100/electronic-music">Electronic Music <img src="../assets/icons/electronic.png" alt="electronic-music" title="electronic-music-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/20747/headphones">Headphones <img src="../assets/icons/headphones.png" alt="headphones" title="headphones-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/oTyopyeAHiFU/salami-pizza">Salami Pizza <img src="../assets/icons/pizza.png" alt="salami-pizza" title="salami-pizza-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/107442/cookie">Cookie <img src="../assets/icons/cookie.png" alt="cookie" title="cookie-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/TO7tQS2Frpif/siba-inu-kawaii">Siba Inu Kawaii <img src="../assets/icons/dog.png" alt="dog" title="dog-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/IZ93evILA9l5/puppy">Puppy <img src="../assets/icons/puppy.png" alt="puppy" title="puppy-icon"></a>
+                        <a target="_blank" href="https://icons8.com/icon/w7B57EZzIV9I/planet">Planet <img src="../assets/icons/planet.png" alt="planet" title="planet-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/16007/volunteering">Volunteering <img src="../assets/icons/volunteering.png" alt="volunteering" title="volunteering-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/iuHJFo6arekf/telescope">Telescope <img src="../assets/icons/telescope.png" alt="telescope" title="telescope-icon"></a>
+                    <a target="_blank" href="https://icons8.com/icon/a2MFXoTTlsWP/nebula">Galaxy <img src="../assets/icons/galaxy.png" alt="galaxy" title="galaxy-icon"></a> 
                 </div>
                 <div class="icons8-author">
                     <p>icons by &nbsp;</p> <a target="_blank" href="https://icons8.com"> Icons8</a>
                 </div>
             </div>
             <div class="flaticon-container">
-                <a href="https://www.flaticon.com/free-icons/wing-chun" target="_blank" title="wing chun icons">Wing Chun icons created by Eucalyp - Flaticon <img src="../assets/icons/wing-chun.png" alt=""></a>
-                <a href="https://www.flaticon.com/free-icons/wing-chun" target="_blank" title="wing chun icons">Wing Chun icons created by Freepik - Flaticon <img src="../assets/icons/tan.png" alt=""></a>       
+                <a href="https://www.flaticon.com/free-icons/wing-chun" target="_blank" title="wing chun icons">Wing Chun icons created by Eucalyp - Flaticon <img src="../assets/icons/wing-chun.png" alt="mannequin" title="mannequin-icon"></a>
+                <a href="https://www.flaticon.com/free-icons/wing-chun" target="_blank" title="wing chun icons">Wing Chun icons created by Freepik - Flaticon <img src="../assets/icons/tan.png" alt="tan" title="tan-icon"></a>       
             </div>
         </div>
     </main>
