fixed header bug

--- a/index.html
+++ b/index.html
@@ -30,45 +30,41 @@
 </head>
 
 <body>
-    <header>
-        <div class="hamburger-menu">
-            <img src="assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
-        </div>
-        <div class="home-container">
-            <a>
-                <img src="assets/icons/home.svg" alt="home" title="home-icon">
-            </a>
-        </div>
-        <p class="journey"><a href="My_Journey/index.html">My Journey</a></p>
-        <p class="bio"> <a href="About_me/index.html">About me</a></p>
-        <div class="social">
-            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo" >
-            </a>
-            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
-            </a>
-        </div>
-        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
-    </header>
+    <div class="hamburger-menu">
+        <img class="hamburger" src="assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
+        <header>
+            <div class="home-container">
+                <a>
+                    <img src="assets/icons/home.svg" alt="home" title="home-icon">
+                </a>
+            </div>
+            <p class="journey"><a href="My_Journey/index.html">My Journey</a></p>
+            <p class="bio"> <a href="About_me/index.html">About me</a></p>
+            <div class="social">
+                <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
+                    <img src="assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo" >
+                </a>
+                <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
+                    <img src="assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
+                </a>
+            </div>
+            <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
+        </header>
+    </div>
+    
     <main>
  
-        <div class="full-name">
+        <section class="full-name">
             <div class="name-container">
-                <h1 class="name">Thomas</h1>
-            </div>
-            <div class="second-name-container">
-                <h1 class="second-name">Ernesto</h1>
-            </div>
-            <div class="lastname-container">
-                <h1 class="lastname">Ginder</h1>
-            </div>
-        </div>
-        <div class="kinder-container">
+                <h1><span class="name">Thomas</span><br><span class="second-name">Ernesto</span><br>
+                    <span class="lastname">Ginder</span></h1>
+                <img src="assets/images/close-up-photo.jpg" alt="close-up-photo" title="close-up">
+        </section>
+        <section class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
             <img src="assets/images/kinder.png" alt="kinder" title="kinder-icon">
-        </div>
-        <div class="skills">
+        </section>
+        <section class="skills">
             <div class="soft-skills">
                 <h2 class="soft-title">Soft Skills:</h2>
                 <ul>
@@ -89,7 +85,7 @@
                     <li>German</li>
                 </ul>
             </div> 
-        </div>
+        </section>
     </main>
     <div class="bg-mention">
         <a class="background-mention" target="_blank" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila &nbsp;</a>
