fixed mobile header

--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -23,9 +23,9 @@
     <title>My Coding Journey</title>
 </head>
 <body>
-    <div class="hamburger-menu">
-        <img src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
-        <header>
+    <header>
+        <div class="hamburger-menu">
+            <img class="hamburger" src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
             <div class="home-container">
                 <a href="../">
                     <img src="../assets/icons/home.svg" alt="home" title="home-icon">
@@ -34,7 +34,6 @@
             <div class="journey-container">
                 <p class="journey"><a href="../My_Journey/">My Journey</a></p>
             </div>
-    
             <p class="bio"> <a href="../About_me/">About me</a></p>
             <div class="social">
                 <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
@@ -45,8 +44,8 @@
                 </a>
             </div>
             <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
-        </header>
-    </div>
+        </div>
+    </header>
    
     <main>
         <div class="main-container">
