fixed header in icon mentions page

--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -25,17 +25,19 @@
 <body>  
     <header>
         <div class="hamburger-menu">
-            <img class="hamburger" src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
+            <img class="hamburger" src="../assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">        
             <div class="home-container">
-                <a>
+                <a href="../">
                     <img src="../assets/icons/home.svg" alt="home" title="home-icon">
                 </a>
             </div>
-            <p class="journey"><a href="My_Journey/index.html">My Journey</a></p>
-            <p class="bio"> <a href="About_me/index.html">About me</a></p>
+            <p class="journey"><a href="../My_Journey/">My Journey</a></p>
+            <div class="about-me-container">
+                <p class="bio"> <a href="../About_me/">About me</a></p>
+            </div>
             <div class="social">
                 <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                    <img src="../assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo" >
+                    <img src="../assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo">
                 </a>
                 <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
                     <img src="../assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
