--- a/About_me/index.html
+++ b/About_me/index.html
@@ -52,17 +52,20 @@
     
     <main>
         <div class="biography">
+            <h1>
+                Hi, I am Thomas Ernesto Ginder,
+            </h1>
             <div class="my-photo-container">
                 <img class="my-photo" src="../assets/images/my-photo.jpg" alt="Thomas-Photo" title="thomas-photo">
             </div>
-            <h1 class="bio-text">
-                Hi, I am Thomas Ernesto Ginder, I'm 23 years old guy from Sardinia, Italy. My dream is to become a 
+            <p class="bio-text">
+                 I'm 23 years old guy from Sardinia, Italy. My dream is to become a 
                 professional software developer and who knows, become a robotic engineer. One of my goals is to improve 
                 life on our planet with my programs. I consider myself a very kind person with a lot of energy to improve 
                 myself and my work every day, a messy but pedant person who loves to use logic to create everything that 
                 can give me a satisfying output. 
                 I prefer slow but detailed work instead a fast and trivial work because a hurry is never good.
-            </h1>
+            </p>
         </div> 
         <h2 class="title">Things I like:</h2>
         <ul>
