mirror(link inside home page for my journey and about me)

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <img src="assets/icons/home.svg" alt="home" title="home-icon">
                 </a>
             </div>
-            <p class="journey"><a href="My_Journey/index.html">My Journey</a></p>
-            <p class="bio"> <a href="About_me/index.html">About me</a></p>
+            <p class="journey"><a href="My_Journey/">My Journey</a></p>
+            <p class="bio"> <a href="About_me/">About me</a></p>
             <div class="social">
                 <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
                     <img src="assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo" >
@@ -61,6 +61,22 @@
         <section class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
             <img src="assets/images/kinder.png" alt="kinder" title="kinder-icon">
+        </section>
+        <section class="other-pages">
+            <div class="mirror-journey">
+                <a href="My_Journey/">
+                    <img src="assets/images/sh-journey-m.PNG" alt="screenshot-journey-mobile" title="screenshot journey mobile" class="journey-m">
+                    <img src="assets/images/sh-journey-d.PNG" alt="screenshot-journey-desktop" title="screenshot journey desktop" class="journey-d">
+                    <h3>My Journey</h3>
+                </a>
+            </div>
+            <div class="mirror-about-me">
+                <a href="About_me/">
+                    <img src="assets/images/sh-about-me-m.PNG" alt="screenshot-about-me-mobile" title="screenshot about me mobile" class="about-me-m">
+                    <img src="assets/images/sh-about-me-d.PNG" alt="screenshot-about-me-desktop" title="screenshot about me desktop" class="about-me-d"> 
+                    <h3>About Me</h3> 
+                </a>
+            </div>
         </section>
         <section class="skills">
             <div class="soft-skills">
