--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas Ernesto Ginder Portfolio">
-    <meta property="og:image" content="
-        http://127.0.0.1:5500/assets/images/my-photo.jpg">
+    <meta property="og:image" content="/assets/images/my-photo.jpg">
     <meta property="og:description" content="Welcome to my portfolio website! Here, you can explore my 
     past projects, skills, and experience. I'm a highly motivated and detail-oriented professional
      with a passion for delivering high-quality work.">
