--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="../assets/css/journey.css">
     <link rel="icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="
-    http://127.0.0.1:5500/assets/images/my-photo.jpg">
+    <meta property="og:image" content="../assets/images/my-photo.jpg">
     <meta property="og:description" content="Welcome to my coding journey!! Here you can read about all my experiences from my school 
     to my work-in-progress master">
     <meta name="description" content="Welcome to my coding journey!! Here you can read about all my experiences from my school 
