changed look of my Journey and About me (created new page contact form)

--- a/About_me/index.html
+++ b/About_me/index.html
@@ -50,31 +50,44 @@
     </header>
     
     <main>
-        <div class="biography">
-            <h1>
-                Hi, I am Thomas Ernesto Ginder,
-            </h1>
+        <section class="bio-container">
+            <div class="title-container">
+                <h1>
+                    Hi, I am Thomas Ernesto Ginder,
+                </h1>  
+            </div>
+            <div class="biography">
                 <img class="my-photo" src="../assets/images/my-photo.jpg" alt="Thomas-Photo" title="thomas-photo">
-            <p class="bio-text">
-                 I'm 23 years old guy from Sardinia, Italy. My dream is to become a 
-                professional software developer and who knows, become a robotic engineer. One of my goals is to improve 
-                life on our planet with my programs. I consider myself a very kind person with a lot of energy to improve 
-                myself and my work every day, a messy but pedant person who loves to use logic to create everything that 
-                can give me a satisfying output. 
-                I prefer slow but detailed work instead a fast and trivial work because a hurry is never good.
+                <div class="bio-text-container">
+                    <p class="bio-text">
+                        I'm 23 years old guy from Sardinia, Italy. My dream is to become a 
+                       professional software developer and who knows, become a robotic engineer. One of my goals is to improve 
+                       life on our planet with my programs. I consider myself a very kind person with a lot of energy to improve 
+                       myself and my work every day, a messy but pedant person who loves to use logic to create everything that 
+                       can give me a satisfying output. 
+                       I prefer slow but detailed work instead a fast and trivial work because a hurry is never good.
+                   </p>
+                </div>
+            </div> 
+            <p class="bg-mention">
+                Image by <a href="https://www.freepik.com/free-vector/hand-drawn-abstract-shapes-pattern_18006690.htm#page=2&position=4&from_view=search&track=ais&uuid=5aad2a7a-12a1-4694-9642-562e84f3e4f9">Freepik</a>
             </p>
-        </div> 
-        <h2 class="title">Things I like:</h2>
-        <ul>
-            <li class="gaming"><img src="../assets/icons/game-controller.png" alt="game-controller" title="game-controller-icon">Gaming <img src="../assets/icons/heart.png" alt="pixel-heart" title="pixel-heart-icon"></li>
-            <li class="board"><img src="../assets/icons/chess.png" alt="chess-king" title="chess-king-icon">Board Games <img src="../assets/icons/dice.png" alt="dice" title="dice-icon"></li>
-            <li class="music"><img src="../assets/icons/electronic.png" alt="electronic-music" title="electronic-music-icon">Music <img src="../assets/icons/headphones.png" alt="headphones" title="headphones-icon"></li>
-            <li class="chun"><img src="../assets/icons/wing-chun.png" alt="mannequin" title="mannequin-icon">Wing Chun <img src="../assets/icons/tan.png" alt="tan" title="tan-icon"></li>
-            <li class="eat"><img src="../assets/icons/pizza.png" alt="salami-pizza" title="salami-pizza-icon">Eating <img src="../assets/icons/cookie.png" alt="cookie" title="cookie-icon"></li>
-            <li class="dogs"><img src="../assets/icons/dog.png" alt="dog" title="dog-icon">Dogs<img src="../assets/icons/puppy.png" alt="puppy" title="puppy-icon"></li>
-            <li class="climate"><img src="../assets/icons/planet.png" alt="planet" title="planet-icon">Environment <img src="../assets/icons/volunteering.png" alt="volunteering" title="volunteering-icon"></li>
-            <li class="astronomy"><img src="../assets/icons/telescope.png" alt="telescope" title="telescope-icon">Astonomy <img src="../assets/icons/galaxy.png" alt="galaxy" title="galaxy-icon"></li>
+        </section>
+        <section class="like-container">
+            <div class="title-like-container">
+                <h2 class="title-like">Things I like:</h2>
+            </div>
+            <ul>
+                <li class="gaming"><img src="../assets/icons/game-controller.png" alt="game-controller" title="game-controller-icon">Gaming <img src="../assets/icons/heart.png" alt="pixel-heart" title="pixel-heart-icon"></li>
+                <li class="board"><img src="../assets/icons/chess.png" alt="chess-king" title="chess-king-icon">Board Games <img src="../assets/icons/dice.png" alt="dice" title="dice-icon"></li>
+                <li class="music"><img src="../assets/icons/electronic.png" alt="electronic-music" title="electronic-music-icon">Music <img src="../assets/icons/headphones.png" alt="headphones" title="headphones-icon"></li>
+                <li class="chun"><img src="../assets/icons/wing-chun.png" alt="mannequin" title="mannequin-icon">Wing Chun <img src="../assets/icons/tan.png" alt="tan" title="tan-icon"></li>
+                <li class="eat"><img src="../assets/icons/pizza.png" alt="salami-pizza" title="salami-pizza-icon">Eating <img src="../assets/icons/cookie.png" alt="cookie" title="cookie-icon"></li>
+                <li class="dogs"><img src="../assets/icons/dog.png" alt="dog" title="dog-icon">Dogs<img src="../assets/icons/puppy.png" alt="puppy" title="puppy-icon"></li>
+                <li class="climate"><img src="../assets/icons/planet.png" alt="planet" title="planet-icon">Environment <img src="../assets/icons/volunteering.png" alt="volunteering" title="volunteering-icon"></li>
+                <li class="astronomy"><img src="../assets/icons/telescope.png" alt="telescope" title="telescope-icon">Astonomy <img src="../assets/icons/galaxy.png" alt="galaxy" title="galaxy-icon"></li>
         </ul>
+        </section>
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
