--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -47,10 +47,18 @@
     </header>
    
     <main>
-        <h1 class="title">
-            <strong>Welcome</strong> to my coding  <span>journey!</span>
-        </h1>
-            <div class="grid-container">
+        <div class="title-container">
+            <div class="top-left-corner">
+                <span></span>
+            </div>
+            <h1 class="title">
+                <strong>Welcome</strong><span class="box"> to my coding </span><span class="coded-title">journey!</span>        
+            </h1>
+            <div class="bottom-right-corner">
+                <span></span>
+            </div> 
+        </div>
+            <div class="grid-container first-grid">
                 <div class="grid-texts">
                     <h2 class="grid-title">
                         SIEMENS Step 5 & 7
@@ -85,7 +93,7 @@
                     </p>
                 </div>
             </div>
-            <div class="grid-container">
+            <div class="grid-container third-grid">
                 <div class="grid-texts">
                     <h2 class="grid-title">
                         Html & Css
@@ -99,7 +107,7 @@
                     full-emotional sensation of doing a complex code that works how I want to once again.
                     </p>
                 </div>
-                <img src="../assets/images/html-css.png" alt="html-css-image" title="html-css-image" class="html-css">
+                <div class="html-css"></div>
             </div>  
  
     </main>
