some fixing in journey and about-me

--- a/About_me/index.html
+++ b/About_me/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/bio.css">
+    <link rel="stylesheet" href="../assets/css/about-me.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
@@ -70,7 +70,7 @@
                 </div>
             </div> 
             <p class="bg-mention">
-                Image by <a href="https://www.freepik.com/free-vector/hand-drawn-abstract-shapes-pattern_18006690.htm#page=2&position=4&from_view=search&track=ais&uuid=5aad2a7a-12a1-4694-9642-562e84f3e4f9">Freepik</a>
+               Background Image by <a href="https://www.freepik.com/free-vector/hand-drawn-abstract-shapes-pattern_18006690.htm#page=2&position=4&from_view=search&track=ais&uuid=5aad2a7a-12a1-4694-9642-562e84f3e4f9">Freepik</a>
             </p>
         </section>
         <section class="like-container">
