--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <li>Responsibility</li>
                  </ul>
             </div>  
-            <div class="hard-skill">
+            <div class="hard-skills">
                 <h2 class="hard-title">Hard Skills:</h2>
                 <ul>
                     <li>Html</li>
@@ -101,8 +101,10 @@
         </section>
     </main>
     <div class="bg-mention">
-        <a class="background-mention" target="_blank" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila &nbsp;</a>
-         on Freepik
+        <p>
+            <a class="background-mention" target="_blank" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila &nbsp;</a>
+            on Freepik
+        </p>
     </div>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
